fix: fix height collapse issue

--- a/css/style.sass
+++ b/css/style.sass
@@ -528,9 +528,13 @@ $feat-colors2: #132d45, #06233c, #00132a
 
 .submission-form
   display: none
+  position: absolute
+  bottom: 550px
 
 .om-section
   display: none
+  position: absolute
+  bottom: 550px
 
 .sign-up-container
   width: 150px
